# swagger-spec.json
@@ -222,6 +222,65 @@
         ]
       }
     },
+    "/api/users/csv/template": {
+      "get": {
+        "description": "Download CSV template for users import",
+        "operationId": "UsersController_downloadTemplate",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "CSV template file"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Contacts are not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": [
+          "Users"
+        ]
+      }
+    },
+    "/api/users/csv/import": {
+      "post": {
+        "description": "Import users from CSV file",
+        "operationId": "UsersController_importUsers",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Users imported successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Contacts are not found"
+          },
+          "409": {
+            "description": "Some users already exist or invalid data"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": [
+          "Users"
+        ]
+      }
+    },
     "/api/auth": {
       "post": {
         "operationId": "AuthController_signin",
